try to build an example for  get_survey #4

--- a/paper/wrangleData.qmd
+++ b/paper/wrangleData.qmd
@@ -555,6 +555,7 @@ This was an issue for some `r {nrow(needed)/nrow(sd) * 100} %>% round()`% of the
 
 ```{r}
 #| label: workflow
+#| cache: TRUE
 
 df_toy <- surveys_data |> 
   filter(archive %in% c("icpsr", "pew")) |> 
