--- a/paper/wrangleData.qmd
+++ b/paper/wrangleData.qmd
@@ -38,7 +38,7 @@ affiliations:
   - id: ia
     name: Department of Political Science, University of Iowa, Iowa City, USA
 
-thanks: "Corresponding author: [yuehong-tai@uiowa.edu](mailto:yuehong-tai@uiowa.edu). Current version: `r format(Sys.time(), '%B %d, %Y')`.  Replication materials and complete revision history may be found at [https://github.com/fsolt/dem_mood](https://github.com/fsolt/wrangling_data). The authors contributed equally to this work.  Yue Hu appreciates the funding support from the National Natural Science Foundation of China (72374116) and Tsinghua University Initiative Scientific Research Program (2024THZWJC01)."
+thanks: "Corresponding author: [yuehong-tai@uiowa.edu](mailto:yuehong-tai@uiowa.edu). Current version: `r format(Sys.time(), '%B %d, %Y')`.  Replication materials and complete revision history may be found at [https://github.com/fsolt/wrangling_data](https://github.com/fsolt/wrangling_data). The authors contributed equally to this work.  Yue Hu appreciates the funding support from the National Natural Science Foundation of China (72374116) and Tsinghua University Initiative Scientific Research Program (2024THZWJC01)."
 
 citeproc: false # to make multibib and wordcount work
 filters:
@@ -77,7 +77,7 @@ title: |
   | Best Practices for Wrangling Data
   | Before Harmonization
 
-subtitle: "Preliminary version. Do not circulate without permission."
+# subtitle: "Preliminary version. Do not circulate without permission."
 
 abstract: "This article focuses on a preliminary step in any ex-post data harmonization project---wrangling the pre-harmonized data---and
 suggests best practices for helping scholars avoid errors in this often-tedious work. To provide illustrations of these best practices, the article uses the examples of pre-harmonizing procedures used to produce the Standardized World Income Inequality Database (SWIID), a widely used database that uses Gini indices from multiple sources to create comparable estimates, and the Dynamic Comparative Public Opinion (DCPO) project, which creates a workflow for harmonizing aggregate public opinion data."
@@ -259,18 +259,20 @@ body(small_multiple)[[19]] <- substitute(
 ```
 
 \pagebreak
+# The Problem with 'Janitor Work'
 Data harmonization projects---and a growing volume of other political science research---can be characterized as data science: they employ large quantities of data, often drawn from a large number of different sources.
 For such projects, data wrangling, the task of getting these data into the format required to perform harmonization or analysis, is notoriously the bulk of the work [see, e.g., @Lohr2014].
 Such data 'janitor work' is often viewed as tiresome, as something to be delegated to research assistants, to someone---indeed anyone---else [see @Torres2017].
-Data wrangling is, however, critically important to scientific inquiry, and errors in the process can undermine our conclusions.
+Data wrangling is, however, critically important to scientific inquiry, and errors that arise during this process can undermine our conclusions.
 
-We focus here on one particularly insidious problem that can afflict the data wrangling of any researcher: data-entry errors.
+One kind of data-wrangling error presents a particularly insidious problem: errors that occur during manual data entry.
 Faced with the task of getting data into the correct format, even some very sophisticated researchers will conclude that the most straightforward means to that end is to simply copy the needed data into a spreadsheet manually.
 This technique may be straightforward, but it is very much prone to error.
 @Barchard2011 found that 'research assistants' assigned in an experiment to carefully enter data manually, even those instructed to double-check their entries against the original, had error rates approaching 1% in just a single roughly half-hour session.
 Rates likely go up as the tedious task goes on.
 
-Like 'janitor work' itself, data-entry errors have thus far gained little attention in political science.
+Like 'janitor work' itself, data-entry errors have thus far gained little attention among political scientists.
+**The rest of this section still needs revised.**
 In this piece, we illustrate the pernicious threat this problem poses by carefully scrutinizing a prominent recent work that examines how changes in democracy affect democratic support among the public [@Claassen2020b].^[
 In this study, we leverage the case of thermostatic support for democracy to emphasize the impact of data preprocessing---a largely underexplored but critical phase in research methodology---on empirical outcomes.
 As @Weidmann2023 points out, although data collection, processing, and analyses can all influence conclusions, they follow distinct principles and require different types of action. 
@@ -285,7 +287,7 @@ Further, our point here is not to criticize a particular result, but to highligh
 On this basis, we conclude with four practical suggestions to help political scientists reduce data-entry errors and their impact.
 Rather than merely a single replication of a difficult-to-detect phenomenon, we hope readers will also consider this work as a contribution to the growing "open science" movement to build more reliable and transparent research both in and beyond social science [@ChristensenEtAl2019; @EngzellRohrer2021].
 
-## Wrangling Income Inequality Data
+# Avoiding Data Entry Errors in Income Inequality Data
 
 ```{r data-setup, include=FALSE}
 api <- c("LISSY", "CEPALStat", "OECD", "Eurostat", "Beegle et al. 2016", "Statistics Canada", "Statistics Denmark", "Statistics Finland", "CSO Ireland", "Statistics Norway", "Statistics Sweden", "World Bank Poverty & Inequality Platform", "Statbank Greenland")
@@ -315,7 +317,7 @@ automated_percent <- swiid_source %>% count(mode == "hand") %>% mutate(p = round
 ```
 
 The Standardized World Income Inequality Database (SWIID) is a long-running project that seeks to harmonize as much as possible income inequality statistics  for the broadest possible coverage of countries and years [@Solt2009; @Solt2016; @Solt2020].
-As of its most recent update at the time of this writing, its source data consists of some 27,000 observations of the Gini coefficient in various countries and years, collected from international organizations, national statistics bureaus, and academic studies.^[
+As of its most recent update at the time of this writing, its source data consists of some 27,000 observations of the Gini coefficient in various countries and years, collected from over 400 separate sources including international organizations, national statistics bureaus, and academic studies.^[
 These source data can be accessed and explored graphically on the web at <https://fsolt.org/swiid/swiid_source.html>.]
 
 ```{r data_by_method, echo=FALSE, fig.cap = "\\label{fig:data_by_method}Income Inequality Observations by Method of Collection"}
@@ -335,7 +337,7 @@ geom_bar(stat="identity") +
     ylab("Observations")
 ```
 
-To the extent practicable, the process of collecting these source data is automated.^[
+To avoid potential data-entry errors (as well as to ensure that the updates and revisions that are frequent in many of these sources are automatically incorporated as they become available), the process of collecting these source data is automated to the greatest extent practicable.^[
 The R code for the automated data collection can be viewed here: <https://github.com/fsolt/swiid/blob/master/R/data_setup.R>.]
 Most international organizations and a few national statistical bureaus use application programming interfaces (APIs) that facilitate downloading their data, and often the R community has built packages using these APIs to make the task even easier [see @Magnusson2014; @Lahti2017; @Lugo2017; @Blondel2018; @Wickham2018].
 The SWIID takes as much advantage of these resources as possible, as shown in Figure&nbsp;\ref{fig:data_by_method}.
@@ -347,15 +349,12 @@ This means not only that the possibility of errors introduced by hand entry for 
 
 However, this also means that some `r 100 - automated_percent`% of the observations are entered manually in a separate spreadsheet.^[
 See <https://github.com/fsolt/swiid/blob/master/data-raw/fs_added_data.csv>.]
-There are a variety of reasons that for one of several reasons.
-First, many sources contain just a handful or fewer observations, making the payoff to the often laborious process of data cleaning too small to justify the effort.
-Second, some sources---including most academic articles---are behind paywalls, making reproducibility particularly challenging.^[
+Many sources contain just a handful or fewer observations, making the payoff to the often laborious process of data cleaning too small to justify the effort.
+Some sources---including most academic articles---are behind paywalls, making reproducibility particularly challenging.^[
 When these sources contain more than a handful of observations, these are still collected using Sepulveda's -@Sepulveda2024 `tabulapdf` to avoid manual data-entry errors.]
-Third, other sources, such as many books, cannot be read directly into R.
+Other sources, such as many books, cannot be read directly into R.
 And finally, one source contains crucial information encoded in the typeface of its tables [see @Mitra2006, 6]; this information would be lost if the tables were read directly into R.
-All of the entries in this spreadsheet have been checked repeatedly for duplicates and errors.^[
-Which, of course, is not to say that these entries are error-free.
-If you spot any problems or know of sources that might have been missed, _please_ report them at <https://github.com/fsolt/swiid/issues/6>.]
+All of the entries in this spreadsheet have been checked repeatedly for duplicates and errors.
 
 
 ## Wrangling Survey Data: Data-Entry Errors and Democratic Support
